--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,6 @@ dependencies {
     implementation 'com.davemorrissey.labs:subsampling-scale-image-view:3.10.0'
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'com.github.bumptech.glide:glide:4.14.1'
-
+    implementation 'de.hdodenhof:circleimageview:3.1.0' //Circle ImageView
 
 }
